<resources>
    <string name="app_name">HospitalScheduler</string>
    <string name="title_activity_operation__info_tabs">Operation_Info_tabs</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="show_notified_key">notified_key</string>
    <string name="menu_refresh">Refresh</string>
    <string name="is_notified_pref">is_notified_pref</string>
    <string name="ot_default_number">OT 0</string>
    <string name="ot_current">Current</string>
    <string name="ot_next">Next</string>
    <string name="stage_default">stage 0:</string>
    <string name="default_time_value">0</string>
    <string name="minutes">m</string>
    <string name="surgeon_placeholder">Surgeon</string>
    <string name="_1">1</string>
    <string name="curr_op_stage_marker">curr_op_stage_marker</string>
    <string name="next_op_stage_marker">next_op_stage_marker</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="doctor_icon">Doctor icon</string>
    <string name="background_img_desc">Background image describing operation category</string>
    <string name="bkgrnd_alpha_layer">bkgrnd alpha layer</string>
    <string name="clock_icon">Clock icon</string>
    <string name="default_notification_channel_id">TEST_CHANNEL_ID</string>
    <string name="info_tab_title">Info</string>
    <string name="schedule_tab_title">Schedule</string>
    <string name="next_tab_title">Next</string>
    <string name="no_covid_info">No COVID Info</string>
    <string name="surgeon_label">Surgeon</string>
    <string name="nurse_label">Nurse</string>
    <string name="anesth_label">Anesthetist</string>
    <string name="registrar_label">Registrar</string>
    <string name="bullet">•</string>
    <string name="mins_ago">%1s ago</string>
    <string name="age_placeholder">(%s)</string>
    <string name="procedure">Procedure</string>
    <string name="patient">Patient</string>
    <string name="no_comments">No comments yet!</string>
    <string name="covid">COVID</string>
    <string name="staff">Staff</string>
    <string name="COVID_message">Patient has COVID or is close-contact</string>
    <string name="no_COVID_message">No COVID information</string>
</resources>