<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="230dp"
    android:paddingVertical="10dp">
<!--    android:layout_marginVertical="10dp">-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sched_frag_external_markers"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        cardview:layout_constraintStart_toStartOf="parent"
        android:elevation="50dp"
        android:background="@color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <View
                android:id="@+id/sched_frag_curr_marker1"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"/>

            <View
                android:id="@+id/sched_frag_curr_marker2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white" />

            <View
                android:id="@+id/sched_frag_curr_marker3"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"/>

            <View
                android:id="@+id/sched_frag_curr_marker4"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"/>

            <View
                android:id="@+id/sched_frag_curr_marker5"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@color/white"/>

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/sched_cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="50dp"
        android:elevation="0dp"
        cardview:cardCornerRadius="0dp"
        cardview:cardUseCompatPadding="false"
        cardview:cardPreventCornerOverlap="true"
        cardview:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/sched_frag_stage_cl"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                cardview:layout_constraintStart_toStartOf="parent"
                cardview:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sched_frag_stage_1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/sched_frag_stage_padding"
                        android:text="@string/_1"
                        android:textSize="@dimen/sched_frag_stage_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sched_frag_stage_2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/sched_frag_stage_padding"
                        android:text="@string/_2"
                        android:textSize="@dimen/sched_frag_stage_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sched_frag_stage_3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/sched_frag_stage_padding"
                        android:text="@string/_3"
                        android:textSize="@dimen/sched_frag_stage_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sched_frag_stage_4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/sched_frag_stage_padding"
                        android:text="@string/_4"
                        android:textSize="@dimen/sched_frag_stage_text_size"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/sched_frag_stage_5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/white"
                        android:gravity="center"
                        android:paddingHorizontal="@dimen/sched_frag_stage_padding"
                        android:text="@string/_5"
                        android:textSize="@dimen/sched_frag_stage_text_size"
                        android:textStyle="bold" />

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                cardview:layout_constraintEnd_toEndOf="parent"
                cardview:layout_constraintStart_toEndOf="@id/sched_frag_stage_cl"
                cardview:layout_constraintTop_toTopOf="parent">

                <View
                    android:id="@+id/sched_frag_back_colour"
                    android:layout_width="match_parent"
                    android:background="#CCECC1"
                    android:layout_height="match_parent"/>


                <ImageView
                    android:id="@+id/sched_frag_back_icon"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:adjustViewBounds="true"
                    android:alpha="0.1"
                    android:padding="12dp"
                    android:scaleType="centerCrop"
                    cardview:layout_constraintTop_toTopOf="parent"
                    cardview:layout_constraintBottom_toBottomOf="parent"
                    cardview:layout_constraintStart_toStartOf="parent"/>

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#EF9A9A"
                    android:alpha="0.3"/>


            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>


